# tracking_people

./: .gitignore  CMakeLists.txt  Doxyfile  FindPeople.cpp  Human.cpp  Human.h  README.md  evaluator.py  ground_truth_visualizer.cpp  main.cpp  preprocessing.cpp  preprocessing.h  utils.cpp  utils.h
data/: A1_groundtruthC.txt  SelectedPedestriansID.txt
data/__MACOSX/A1_assignment/: ._A1_groundtruthC.txt  ._SelectedPedestriansID.txt
report/: A1_Report.tex  biblio.bib  samplepaper.aux  samplepaper.tex
